hphp/hack/test/typecheck/expression_trees/nested_expression_tree_in_splice_in_lambda.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`() ==> {
    $x = ${ ExampleDsl`1`};
  }`;
}
